compiler/weave_syntax/tests/data/syntax/expressions/is-as-expr-0001.error
error: Trailing comma is not allowed in argument list.
        --> <source>:8:16
         |
       8 | consume(a, b, c,);
         |                ^
